@@ -76,6 +76,8 @@ typedef union {
     u32 TAP_TEMPO:1;
     u32 UP:1;
     u32 DOWN:1;
+
+    u32 SCALE_PRESSED:1;
   };
 } seq_ui_button_state_t;
 
